[package]
name = "ilp-connector-relay"
version = "0.1.0"
authors = ["dj <dj@coil.com>"]
description = "Interledger connector relay"
edition = "2018"
publish = false

[dependencies]
bytes = "0.4.11"
futures = "0.1.25"
hyper = "0.12.23"
ilp = { package = "interledger-packet", path = "../interledger-packet" }

[dev-dependencies]
lazy_static = "1.2.0"
tokio = "0.1.15"
