[package]
name = "interledger-relay"
version = "0.1.0"
authors = ["dj <dj@coil.com>"]
description = "Interledger connector relay"
edition = "2018"
publish = false

[dependencies]
bytes = "0.4.11"
futures = "0.1.25"
http = "0.1.15"
hyper = "0.12.23"
ilp = { package = "interledger-packet", path = "../interledger-packet" }
#serde_json = "1.0"
tokio = "0.1.15"

[dev-dependencies]
lazy_static = "1.2.0"
